# message_franking_crypto

./: Cargo.toml  README.md  license.txt  results.txt
src/: franking.rs  lib.rs  lib_comkey.rs  lib_common.rs  lib_general.rs  lib_optimized.rs  lib_plain.rs  lib_trap.rs  main.rs
src/lib_comkey/: mod.rs
src/lib_general/: mod.rs
src/tests/: integration_test.rs
tests/: integration_test.rs
