[package]
name = "message_franking_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = ["serde", "std"], package = "curve25519-dalek-ng" }
rand = "0.8.5"
rand_core = "0.6.4"
sha2_old = { package = "sha2", version = "0.9" }
sha2 = "0.10"
sha3 = "0.10.8"
bincode = "1.3.3"
aes-gcm = "0.10.3"
hmac = "0.12.1"
digest = { version = "0.10.3", features = ["mac"] }
generic-array = "1.0.0"
lazy_static = "1.4.0"
crypto_box = { version = "0.9.1", features = ["seal"] }
zkp = { version = "0.8.0", features = ["u64_backend"] }
rand_chacha = "0.3.1"
typenum = "1.17.0"